profile cleanup. Also provide the property validation.provider to the diffrent test runner setups
git-svn-id: https://svn.jboss.org/repos/hibernate/validator/trunk@17206 1b8cb986-b30d-0410-93ca-fae66ebed9b2